# TeXify

./: .env  .gitignore  Cargo.toml  README.md  leptos_options.toml  render_images.py
shared/: Cargo.toml
shared/src/: basicblock.rs  image_processing.rs  item.rs  lib.rs  model.rs  symbol_model.rs
toy/: Cargo.toml
toy/src/: main.rs
training/: Cargo.toml
training/.sqlx/: query-e3e2f26e81957e00bea580d4bc59a768d4effd09908e91bb19b7cb6d9e00b208.json
training/models/: config.json
training/src/: data.rs  dataset.rs  main.rs  training.rs
training2/: Cargo.toml
training2/src/: data.rs  infer.rs  main.rs  training.rs
web/: Cargo.toml  README.md  leptos_options.toml
web/end2end/: tsconfig.json
web/public/: classifier.css  config.json  include-latexjs.js  include-mathjax-component.js  manifest.json  mathjax_bindings.js  sorted_keys.csv  sw.js
web/src/: app.rs  lib.rs  main.rs
web/src/app/: classifier.rs  footer.rs  install_button.rs
web/src/app/classifier/: keys.rs  model.rs  state.rs
