[workspace]
members = [
    "shared",
    "toy",
    "training",
    "web",
]

resolver = "2"

[workspace.dependencies]
shared = { path = "shared"}

[profile.dev]
incremental = true
opt-level = 0
codegen-units = 256

[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"
